# SignalSlot

./: CMakeLists.txt
docs/: doku.md
include/: linked_list.hpp  signals.hpp
src/: signals.cpp
test/: CMakeLists.txt  SignalSlotTest.cpp
